fix welcome page

--- a/index.mdx
+++ b/index.mdx
@@ -1,23 +1,11 @@
 ---
 title: "Welcome to Dromo"
-description: "The intuitive spreadsheet importer that seamlessly integrates with your product"
 icon: "rocket"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
-
 Dromo is an easy and intuitive spreadsheet importer that integrates seamlessly with your product. Dromo helps your users match columns, correct errors, perform complex validations, transform values, and upload perfectly formatted data.
 
-<Card title="🚀 Try Our Live Demo" icon="play" href="https://demo.dromo.io">
+<Card horizontal title="🚀 Try Our Live Demo" icon="play" href="https://demo.dromo.io">
   Experience Dromo with realistic data and see how easy data importing can be
 </Card>
 
@@ -65,43 +53,6 @@ Get up and running with Dromo in minutes. Choose the integration that works best
     Brand the importer to match your application with custom styling and user experience settings.
   </Step>
 </Steps>
-
-## What You Need to Get Started
-
-<AccordionGroup>
-  <Accordion title="Free License Key">
-    Get started immediately with a free license key by [registering for an account](https://dashboard.dromo.io/auth/registration). No payment information required.
-  </Accordion>
-  <Accordion title="JavaScript Environment">
-    Dromo works with any JavaScript application or HTML page where you want users to import data.
-  </Accordion>
-  <Accordion title="Supported File Types">
-    Import CSV, TSV, XLS, XLSX, XML, or JSON files directly into your application.
-  </Accordion>
-</AccordionGroup>
-
-## Key Features
-
-<CardGroup cols={3}>
-  <Card title="Smart Column Matching" icon="arrows-turn-to-dots">
-    Intelligent algorithms help users map their columns to your schema
-  </Card>
-  <Card title="Real-time Validation" icon="shield-check">
-    Catch and fix errors before data enters your system
-  </Card>
-  <Card title="Data Transformation" icon="wand-magic-sparkles">
-    Clean and format data automatically with custom hooks
-  </Card>
-  <Card title="White-label Ready" icon="palette">
-    Fully customizable to match your brand and user experience
-  </Card>
-  <Card title="Enterprise Security" icon="lock">
-    SOC 2 compliant with enterprise-grade security features
-  </Card>
-  <Card title="Developer Friendly" icon="code">
-    Comprehensive APIs and SDKs for complete integration control
-  </Card>
-</CardGroup>
 
 ## Next Steps
 
