--- a/guides/using-addField.mdx
+++ b/guides/using-addField.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Concatenating and splitting fields"
-description: "This guide demonstrates how to use step hooks to add or remove fields midway through an import."
+title: "Concatenating and Splitting Fields"
 ---
+
+This guide demonstrates how to use step hooks to add or remove fields midway through an import.
 
 <Info>
   For more detail about the `instance.addField` method, see the [Reference](/hooks#instanceaddfield) page. For more detail about the `instance.removeField` method, see the [Reference](/hooks#instanceremovefield) page.
