--- a/guides/using-row-hooks.mdx
+++ b/guides/using-row-hooks.mdx
@@ -1,6 +1,8 @@
 ---
-title: "Validating with external data"
+title: "Validating with External Data"
 ---
+
+The following example demonstrates how to use row hooks to validate data against an external API.
 
 <Info>
   For more detail about row hooks, see the [Reference](/hooks#row-hooks) page
