--- a/guides/using-beforeFinish.mdx
+++ b/guides/using-beforeFinish.mdx
@@ -1,7 +1,8 @@
 ---
-title: "Validating multiple rows at once"
-description: "Row hooks are great for validating a single row, but what if you want to validate multiple rows at once? For example, you want to make sure that the user has imported at least 20 rows. In this case, you can use the beforeFinish callback."
+title: "Validating Multiple Rows at Once"
 ---
+
+Row hooks are great for validating a single row, but what if you want to validate multiple rows at once? For example, you want to make sure that the user has imported at least 20 rows. In this case, you can use the beforeFinish callback.
 
 This function will run every time the user clicks the "Finish" button. If it returns an object with the `cancel` property set to `true`, the user will be reverted to the data review screen, and the `message` will be displayed as a table-level error.
 
