--- a/guides/using-transform-data.mdx
+++ b/guides/using-transform-data.mdx
@@ -1,29 +1,30 @@
 ---
-title: "AI editing with user transformations"
-description: "Dromo's Transform Data feature allows your users to create bulk transformations from natural language and execute them on the dataset. The feature is available on the Pro plan."
+title: "AI Editing with User Transformations"
 ---
 
 ## Overview
+
+Dromo's Transform Data feature allows your users to create bulk transformations from natural language and execute them on the dataset. The feature is available on the Pro plan.
 
 <Check>
   Enable Transform Data with the [`reviewStep.enableUserTransformations` setting](/settings#enableusertransformations).
 </Check>
 
-With `enableUserTransformations` enabled, you will see a "Transform data" button on the Data Review step.
+With `enableUserTransformations` enabled, you will see a "Transform Data" button on the Data Review step.
 
-![Transform data button](\images\guides\assets\images\review_screen_button-e9c4c05bd494cc13389f76c2ab8f5650.png)
+![Transform data button](/images/guides/assets/images/review_screen_button.png)
 
 Click this button to open the Transform Data modal. You will be prompted for what you would like to do to your data.
 
-![Transform data prompt](\images\guides\assets\images\empty_prompt-34651e12db7e9394d7e44c93efb52f88.png)
+![Transform data prompt](/images/guides/assets/images/empty_prompt.png)
 
 Transform Data takes a user's request and turns it in to a transformation that can be applied to the data. If the request was successfully able to produce a transformation, the result is previewed to the user so they can optionally accept or reject it.
 
-![Data Change Preview](\images\guides\assets\images\last-comma-first-699f99617101eb318d1f10be6dc64c92.png)
+![Data Change Preview](/images/guides/assets/images/last-comma-first.png)
 
 The feature can edit values and remove rows. It cannot add rows.
 
-![Remove low value rows](\images\guides\assets\images\remove-cheap-rows-642eae7e803ed76db1c3976aeeee5f2f.png)
+![Remove low value rows](/images/guides/assets/images/remove-cheap-rows.png)
 
 ## Best Practices
 
@@ -33,15 +34,15 @@ The AI building the transformation function never has access to the import data,
 
 For example, given a column containing dates formatted like "Jul-8-1999" where you wish to convert them to "07/08/1999," you should request "Change the date format from 'Jul-8-1999' to MM-DD-YYYY." A request unlikely to succeed would be "Change the dates to US format" because the AI does not have access to the current format.
 
-![date-example](\images\guides\assets\images\date-format-88bf2c972ebfc224d812c5aeaa49aff0.png)
+![date-example](/images/guides/assets/images/date-format.png)
 
 ### Only apply transformations to one row at a time
 
 A transformation only has access to an individual row. If you need to perform an operation that requires knowledge of other rows or information outside of the table, the transformation will not succeed.
 
-![failed prompt](\images\guides\assets\images\failed-prompt-b2c6c567a3f43d3b49faae09b2e8141a.png)
+![failed prompt](/images/guides/assets/images/failed-prompt.png)
 
-### Keep Expectations Realistic
+### Keep expectations realistic
 
 Transform data performs best when it is given a simple, well-scoped task. Changing values based on simple criteria, adjusting date and time formats, and removing rows based on simple conditions are all great uses for the transform data feature.
 
