--- a/settings/field-types.mdx
+++ b/settings/field-types.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Field Types"
 description: "Dromo supports a variety of field types, each with their own unique properties and behaviors. This section describes the different types of fields available and their usage."
-icon: "text"
 ---
 
 ## Usage
@@ -253,11 +252,11 @@ Select fields are treated differently during the import process. Expand the sect
 <Expandable title="more about how select fields work">
   After the column matching step, the user will be prompted to match the values in their file to the given select options.
 
-  ![Select option matching](/images/select_mapping.png)
+  ![Select option matching](/images/guides/assets/images/select_mapping.png)
 
   On the review screen, the field will show as a dropdown menu that the user can pick an option from.
 
-  ![Select dropdown on the review screen](/images/select_dropdown.png)
+  ![Select dropdown on the review screen](/images/guides/assets/images/select_dropdown.png)
 
   A validation error will be shown if a value was not matched and does not equal one of the option labels.
 </Expandable>
